# swift

./: CMakeLists.txt  README.md
cmake/modules/: AddSwift.cmake  AddSwiftUnittests.cmake  DarwinSDKs.cmake  FindICU.cmake  StandaloneOverlay.cmake  SwiftConfigureSDK.cmake  SwiftSetIfArchBitness.cmake  SwiftSharedCMakeConfig.cmake  SwiftVexSupport.cmake
include/swift/AST/: PlatformKinds.def
include/swift/Basic/: Lazy.h  Malloc.h  Platform.h  type_traits.h
include/swift/Option/: Options.td
include/swift/Reflection/: MetadataSource.h
include/swift/Runtime/: Mutex.h  MutexVEXOS.h  Once.h
lib/AST/: Availability.cpp  PlatformKind.cpp
lib/Basic/: CMakeLists.txt  LangOptions.cpp  Platform.cpp
lib/ClangImporter/: ClangImporter.cpp  ImportDecl.cpp
lib/Demangling/: Demangler.cpp
lib/Driver/: DarwinToolChains.cpp  Driver.cpp  ToolChains.h  UnixToolChains.cpp
lib/Frontend/: CompilerInvocation.cpp
lib/IRGen/: GenType.cpp  SwiftTargetInfo.cpp
lib/Parse/: ParseIfConfig.cpp
lib/PrintAsObjC/: PrintAsObjC.cpp
lib/Sema/: TypeCheckAvailability.cpp
lib/Serialization/: SerializedModuleLoader.cpp
lib/TBDGen/tapi/: Platform.cpp
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: AddSwiftStdlib.cmake
stdlib/private/: CMakeLists.txt
stdlib/private/SwiftPrivateLibcExtras/: Subprocess.c
stdlib/public/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
tools/SourceKit/: CMakeLists.txt
tools/SourceKit/lib/SwiftLang/: SwiftDocSupport.cpp
tools/swift-api-digester/: ModuleAnalyzerNodes.cpp
utils/: build-overlay  build-script  build-script-impl  find-overlay-dependencies.sh  sil-opt-verify-all-modules.py  swift-api-dump.py
utils/api_checker/: swift-api-checker.py
utils/build_swift/: defaults.py  driver_arguments.py  migration.py
utils/update_checkout/: update-checkout-config.json
validation-test/: lit.site.cfg.in
(+35 files in other folders)
